fixed taskDetail buttons hover + moveTo mobile z-index mobile

--- a/css/board.css
+++ b/css/board.css
@@ -373,7 +373,7 @@ h3 {
   right: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 1000;
   padding: 16px;
   display: none;
 }
