--- a/css/taskPopup.css
+++ b/css/taskPopup.css
@@ -279,6 +279,35 @@
   font-size: 16px;
 }
 
+.delete-button:hover span, .edit-button:hover span {
+  color: var(--clr-light-blue);
+  font-weight: 700;
+}
+
+.task-popup-delete-icon {
+  width: 24px;
+  height: 24px;
+  min-height: 24px;
+  min-width: 24px;
+  background-image: url("../assets/icons/delete.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.delete-button:hover .task-popup-delete-icon {
+  background-image: url("../assets/icons/deleteContactActive.svg");
+}
+
+.task-popup-edit-icon {
+  background-image: url("../assets/icons/edit.svg");
+}
+
+.edit-button:hover .task-popup-edit-icon {
+  background-image: url("../assets/icons/editContactsActive.svg");
+}
+
+
 .technical-task {
   background-color: #1fd7c1;
   width: 210px !important;
